# cookiecutter_pycomex

./: HISTORY.rst  README.rst  cookiecutter.json  pyproject.toml
.cache/pypoetry/virtualenvs/: envs.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py  util.py
{{ cookiecutter.directory_name }}/: .gitignore  DEVELOP.rst  README.rst  pyproject.toml
{{ cookiecutter.directory_name }}/tests/: test.py  test_util.py
{{ cookiecutter.directory_name }}/{{ cookiecutter.directory_name }}/: cli.py  util.py  utils.py
{{ cookiecutter.directory_name }}/{{ cookiecutter.directory_name }}/experiments/: example_experiment.py  example_sub_experiment.py  template.py  template_experiment.py  template_experiment_sub.py
