[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "comex_cookiecutter"
version = "0.2.0"
description = "Insert Description"
license = "MIT"
authors = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers = ["Jonas Teufel <jonseb1998@gmail.com>"]
readme = "README.rst"
keywords = []
packages = [
    { include = "{{ cookiecutter.directory_name }}" },
]
include = [
    "README.rst",
    "HISTORY.rst",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
pytest = ">=7.1.3"
pytest-cookies = ">=0.6.1"
pytest-venv = ">=0.2.1"
poetry-bumpversion = ">=0.3.0"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'
