[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Insert Description"
license = "{{ cookiecutter.license }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
maintainers = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
keywords = []
packages = [
    { include = "{{ cookiecutter.directory_name }}" },
    { include = "{{ cookiecutter.directory_name }}/experiments"},
    { include = "tests" },
]
include = [
    "README.rst",
    "CHANGLELOG.rst",
    "{{ cookiecutter.directory_name }}/VERSION",
]

[tool.poetry.scripts]
graph_attention_student = '{{ cookiecutter.directory_name }}.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8.0"
pycomex = ">=0.6.0"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
matplotlib = ">=3.5.3"
numpy = ">=1.23.2"
pytest = ">=7.1.3"

[tool.poetry_bumpversion.file."{{ cookiecutter.directory_name }}/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."{{ cookiecutter.directory_name }}/VERSION"]
search = "{current_version}"
replace = "{new_version}"